# celebrer

./: requirements.txt  setup.cfg
celebrer/: opts.py  version.py
celebrer/api/: versions.py
celebrer/api/v1/: actions.py  router.py  schemas.py
celebrer/cmd/: all.py  api.py  db_manage.py  engine.py
celebrer/common/: app_loader.py  config.py  engine.py  exceptions.py  i18n.py  rpc.py  wsgi.py  xmlutils.py
celebrer/db/: api.py  models.py  session.py  types.py
celebrer/engine/: handlers.py
etc/celebrer/: celebrer-paste.ini
