[metadata]
name = celebrer
version = 1.0.0
summary = Celebrer API
description-file =
    README.md
license = Apache License, Version 2.0
author = Mirantis Inc
author-email = agalkin@mirantis.com
home-page = https://github.com/Mirantis/celebrer
classifier =
    Development Status :: 5 - Production/Stable
    Environment :: OpenStack
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python

[files]
packages =
    celebrer

[global]
setup-hooks =
    pbr.hooks.setup_hook

[entry_points]
console_scripts =
    celebrer-all = celebrer.cmd.all:main
    celebrer-api = celebrer.cmd.api:main
    celebrer-engine = celebrer.cmd.engine:main
    celebrer-db-manage = celebrer.cmd.db_manage:main
oslo.config.opts =
    celebrer = celebrer.opts:list_opts